--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/project?serverTimeZone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=sgcheon
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+openweathermap.key=4e2f2fa9bca276b943bc7f523c0a13ac
