--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=sgcheon
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
-openweathermap.key=4e2f2fa9bca276b943bc7f523c0a13ac
+openweathermap.key=
 logging.config=classpath:logback-spring.xml
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
